# Urho3DVideoPlayer

./: CMakeLists.txt  README.md
Data/Shaders/HLSL/: SkyboxPanoramic.hlsl
Data/Techniques/: SkyboxPanoramic.xml
cmake/: FindUrho3D.cmake
src/: Sample.h  Sample.inl  VideoPlayer.cpp  VideoPlayer.h  VideoPlayerSample.cpp  VideoPlayerSample.h
